:bug: Fixed tuto on mobile, :art: other style changes

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -1,5 +1,4 @@
 .menu {
-	min-width: 300px;
 	padding-top: 10vh;
 }
 
