--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -165,18 +165,42 @@
 			width: 100vw;
 
 			.header {
-				min-height: 60px;
+				min-height: 90px;
 
 				.logo {
-					margin: 0;
+					height: 50px;
 
+					svg {
+						transform: scale(0.6);
+					}
 					h1 {
-						font-size: 24px;
+						font-size: 20px;
+						margin: 0;
 					}
-
 					p {
-						font-size: 11px;
+						font-size: 10px;
 					}
+				}
+			}
+
+			.clicks {
+				height: 130px;
+				width: 90vw;
+			}
+
+			.immovable_wheel {
+				padding: 2.5px 5px;
+				height: 30px;
+				line-height: 35px;
+				font-size: 30px;
+				min-width: 50px;
+
+				pre {
+					margin-top: -2.5px;
+				}
+
+				.arrows {
+					display: none;
 				}
 			}
 		}
@@ -204,34 +228,57 @@
 			}
 		}
 
-		.layers-table-wrap .layers-table {
-			.ls-type {
-				min-width: 70px;
-				svg {
-					height: 35px;
-					width: 35px;
-					padding: 0 10px;
+		.layers-table-wrap {
+			.layers-table {
+				.ls-row {
+					margin: 8px 0;
+					padding-left: 10px;
+
+					> div {
+						margin: 5px 0;
+					}
+				}
+
+				.ls-type {
+					min-width: 70px;
+					svg {
+						height: 35px;
+						width: 35px;
+						padding: 0 10px;
+					}
+				}
+
+				.note-length button {
+					margin: 2px 0;
+					padding: 2px 5px;
+
+					svg {
+						margin-right: 5px;
+					}
+				}
+
+				.note-volume {
+					.mute {
+						padding: 0;
+						margin-bottom: 10px;
+					}
+
+					.range-wrap {
+						height: 6px;
+						width: 50px;
+					}
 				}
 			}
 
-			.note-length button {
-				margin: 2px 0;
-				padding: 2px 5px;
+			.tempo {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				margin-bottom: 80px;
+				width: 100%;
 
-				svg {
-					margin-right: 5px;
-				}
-			}
-
-			.note-volume {
-				.mute {
-					padding: 0;
-					margin-bottom: 10px;
-				}
-
-				.range-wrap {
-					height: 6px;
-					width: 50px;
+				.tap {
+					margin-left: 10px;
 				}
 			}
 		}
@@ -244,7 +291,12 @@
 
 				.ls-row .immovable_wheel {
 					width: auto;
+					min-width: 40px;
 				}
+			}
+
+			.tempo {
+				margin-top: 80px;
 			}
 		}
 	}
@@ -258,36 +310,8 @@ specific to .mobile render changes
 .polytronome.mobile {
 	overflow-y: auto;
 
-	&.easy {
-		.layers-table {
-			.immovable_wheel {
-				min-width: 40px;
-			}
-		}
-
-		.tempo {
-			margin-top: 80px;
-		}
-	}
-
 	main {
-		padding: 5vh 0;
-	}
-
-	.immovable_wheel {
-		padding: 2.5px 5px;
-		height: 30px;
-		line-height: 35px;
-		font-size: 30px;
-		min-width: 50px;
-
-		pre {
-			margin-top: -2.5px;
-		}
-
-		.arrows {
-			display: none;
-		}
+		padding: 0;
 	}
 
 	.header {
@@ -295,6 +319,8 @@ specific to .mobile render changes
 			height: auto;
 			flex-direction: column;
 			padding: 1em;
+			margin-top: 1em;
+			z-index: 6;
 
 			.dialog {
 				margin: 0;
@@ -346,38 +372,12 @@ specific to .mobile render changes
 		}
 	}
 
-	.clicks {
-		height: 130px;
-		width: 90vw;
-	}
-
 	.layers-table-wrap {
 		flex-direction: column;
 
 		.layers-table {
 			align-items: center;
 			margin: 20px;
-
-			.ls-row {
-				margin: 8px 0;
-				padding-left: 10px;
-
-				> div {
-					margin: 5px 0;
-				}
-			}
-		}
-
-		.tempo {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			margin-bottom: 20px;
-			width: 100vw;
-
-			.tap {
-				margin-left: 10px;
-			}
 		}
 	}
 
