--- a/src/styles/tutorial.scss
+++ b/src/styles/tutorial.scss
@@ -35,7 +35,7 @@
 	.logo,
 	.clicks,
 	.bottom-buttons,
-	.layers-table-wrap {
+	.layers-table {
 		opacity: 0.1;
 		filter: grayscale(1);
 	}
